--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@tensorflow-models/universal-sentence-encoder": "^1.3.2",
     "@tensorflow/tfjs": "^3.5.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.5",
